# snowpark-ml-train-and-explain

./: Home.py  README.md  pyproject.toml
pages/: 1_Data_Exploration.py  3_Model_Explanation.py
snowflake_ml/: __init__.py
steps/: 1_load_data.py  2_train_a_model.py
